[project]
dependencies = [
  "netsdk",
  "pyside6>=6.9.1",
  "requests>=2.32.4",
]
description = "A 3rd party Dahua camera management tool"
name = "DahuaCameraMaster"
# readme = "README.md"  # 临时注释掉，避免编码问题
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
netsdk = {path = "../dist/NetSDK-2.0.0.1-py3-none-win_amd64.whl"}
